@@ -1,9 +1,11 @@
+
 package com.ecommerce.platform.service.impl;
 
 import com.ecommerce.platform.dto.request.order.CreateOrderRequest;
 import com.ecommerce.platform.dto.request.order.OrderItemRequest;
 import com.ecommerce.platform.dto.response.OrderResponse;
 import com.ecommerce.platform.entity.Order;
+import com.ecommerce.platform.entity.OrderItem;
 import com.ecommerce.platform.entity.Product;
 import com.ecommerce.platform.entity.Tenant;
 import com.ecommerce.platform.entity.User;
@@ -14,10 +16,10 @@ import com.ecommerce.platform.mapper.OrderMapper;
 import com.ecommerce.platform.repository.OrderRepository;
 import com.ecommerce.platform.repository.ProductRepository;
 import com.ecommerce.platform.security.CurrentUserService;
-import com.ecommerce.platform.service.impl.OrderServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -27,11 +29,17 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class OrderServiceImplTest {
@@ -54,175 +62,320 @@ class OrderServiceImplTest {
     private User user;
     private Tenant tenant;
     private Product product;
+    private Order order;
+    private OrderResponse orderResponse;
 
     @BeforeEach
     void setUp() {
 
-        tenant = Tenant.builder()
-                .name("Test Tenant")
-                .domain("test")
-                .enabled(true)
-                .build();
+        user = new User();
+        user.setId(1L);
+        user.setUsername("john");
 
-        user = User.builder()
-                .username("testuser")
-                .email("test@example.com")
-                .keycloakUserId("keycloak-123")
-                .enabled(true)
-                .tenant(tenant)
-                .build();
+        tenant = new Tenant();
+        tenant.setId(1L);
+        tenant.setName("Local");
 
-        product = Product.builder()
-                .name("Laptop")
-                .description("Test laptop")
-                .price(new BigDecimal("1000.00"))
-                .quantity(10)
-                .tenant(tenant)
-                .build();
+        product = new Product();
+        product.setId(1L);
+        product.setName("Laptop");
+        product.setPrice(new BigDecimal("100.00"));
+        product.setQuantity(10);
+
+        order = new Order();
+        order.setId(1L);
+        order.setUser(user);
+        order.setStatus(OrderStatus.PENDING);
+        order.setTotalQuantity(2);
+        order.setTotalAmount(new BigDecimal("200.00"));
+
+        orderResponse = new OrderResponse();
+        orderResponse.setId(1L);
     }
 
     @Test
-    void create_shouldCreateOrderSuccessfully() {
+    void create_ShouldCreateOrderSuccessfully() {
 
-        OrderItemRequest itemRequest = new OrderItemRequest();
+        OrderItemRequest itemRequest =
+                new OrderItemRequest();
 
         itemRequest.setProductId(1L);
         itemRequest.setQuantity(2);
 
-        CreateOrderRequest request = new CreateOrderRequest();
+        CreateOrderRequest request =
+                new CreateOrderRequest();
 
         request.setItems(List.of(itemRequest));
-
-        Order savedOrder = new Order();
-
-        OrderResponse response = new OrderResponse();
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
 
-        when(currentUserService.getCurrentTenant())
-                .thenReturn(tenant);
-
-        when(productRepository.findByIdAndTenant(
-                1L,
-                tenant
-        )).thenReturn(Optional.of(product));
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
 
         when(orderRepository.save(any(Order.class)))
-                .thenReturn(savedOrder);
+                .thenReturn(order);
 
-        when(orderMapper.toResponse(savedOrder))
-                .thenReturn(response);
+        when(orderMapper.toResponse(order))
+                .thenReturn(orderResponse);
 
         OrderResponse result =
                 orderService.create(request);
 
-        assertNotNull(result);
+        assertThat(result)
+                .isNotNull();
 
-        assertEquals(
-                8,
-                product.getQuantity()
-        );
+        assertThat(result.getId())
+                .isEqualTo(1L);
+
+        assertThat(product.getQuantity())
+                .isEqualTo(8);
+
+        verify(currentUserService)
+                .getCurrentUser();
 
         verify(productRepository)
-                .findByIdAndTenant(1L, tenant);
+                .findById(1L);
 
         verify(orderRepository)
                 .save(any(Order.class));
 
         verify(orderMapper)
-                .toResponse(savedOrder);
+                .toResponse(order);
     }
 
     @Test
-    void create_shouldThrowExceptionWhenProductNotFound() {
+    void create_ShouldSetCorrectOrderValues() {
 
-        OrderItemRequest itemRequest = new OrderItemRequest();
+        OrderItemRequest itemRequest =
+                new OrderItemRequest();
 
         itemRequest.setProductId(1L);
-        itemRequest.setQuantity(2);
+        itemRequest.setQuantity(3);
 
-        CreateOrderRequest request = new CreateOrderRequest();
+        CreateOrderRequest request =
+                new CreateOrderRequest();
 
         request.setItems(List.of(itemRequest));
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
 
-        when(currentUserService.getCurrentTenant())
-                .thenReturn(tenant);
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
 
-        when(productRepository.findByIdAndTenant(
-                1L,
-                tenant
-        )).thenReturn(Optional.empty());
+        when(orderRepository.save(any(Order.class)))
+                .thenAnswer(invocation ->
+                        invocation.getArgument(0));
 
-        ResourceNotFoundException exception =
-                assertThrows(
-                        ResourceNotFoundException.class,
-                        () -> orderService.create(request)
+        when(orderMapper.toResponse(any(Order.class)))
+                .thenReturn(orderResponse);
+
+        orderService.create(request);
+
+        ArgumentCaptor<Order> orderCaptor =
+                ArgumentCaptor.forClass(Order.class);
+
+        verify(orderRepository)
+                .save(orderCaptor.capture());
+
+        Order savedOrder =
+                orderCaptor.getValue();
+
+        assertThat(savedOrder.getUser())
+                .isEqualTo(user);
+
+        assertThat(savedOrder.getStatus())
+                .isEqualTo(OrderStatus.PENDING);
+
+        assertThat(savedOrder.getTotalQuantity())
+                .isEqualTo(3);
+
+        assertThat(savedOrder.getTotalAmount())
+                .isEqualByComparingTo(
+                        new BigDecimal("300.00")
                 );
 
-        assertEquals(
-                "Product not found.",
-                exception.getMessage()
-        );
+        assertThat(savedOrder.getOrderItems())
+                .hasSize(1);
 
-        verify(orderRepository, never())
-                .save(any(Order.class));
+        OrderItem savedItem =
+                savedOrder.getOrderItems().get(0);
+
+        assertThat(savedItem.getOrder())
+                .isEqualTo(savedOrder);
+
+        assertThat(savedItem.getProduct())
+                .isEqualTo(product);
+
+        assertThat(savedItem.getQuantity())
+                .isEqualTo(3);
+
+        assertThat(savedItem.getPrice())
+                .isEqualByComparingTo(
+                        new BigDecimal("100.00")
+                );
     }
 
     @Test
-    void create_shouldThrowExceptionWhenStockIsInsufficient() {
+    void create_ShouldCalculateTotalForMultipleItems() {
 
-        product.setQuantity(1);
+        Product secondProduct =
+                new Product();
 
-        OrderItemRequest itemRequest = new OrderItemRequest();
+        secondProduct.setId(2L);
+        secondProduct.setName("Mouse");
+        secondProduct.setPrice(
+                new BigDecimal("50.00")
+        );
+        secondProduct.setQuantity(20);
 
-        itemRequest.setProductId(1L);
-        itemRequest.setQuantity(5);
+        OrderItemRequest firstItem =
+                new OrderItemRequest();
 
-        CreateOrderRequest request = new CreateOrderRequest();
+        firstItem.setProductId(1L);
+        firstItem.setQuantity(2);
 
-        request.setItems(List.of(itemRequest));
+        OrderItemRequest secondItem =
+                new OrderItemRequest();
+
+        secondItem.setProductId(2L);
+        secondItem.setQuantity(3);
+
+        CreateOrderRequest request =
+                new CreateOrderRequest();
+
+        request.setItems(
+                List.of(firstItem, secondItem)
+        );
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
 
-        when(currentUserService.getCurrentTenant())
-                .thenReturn(tenant);
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
 
-        when(productRepository.findByIdAndTenant(
-                1L,
-                tenant
-        )).thenReturn(Optional.of(product));
+        when(productRepository.findById(2L))
+                .thenReturn(Optional.of(secondProduct));
 
-        BadRequestException exception =
-                assertThrows(
-                        BadRequestException.class,
-                        () -> orderService.create(request)
+        when(orderRepository.save(any(Order.class)))
+                .thenAnswer(invocation ->
+                        invocation.getArgument(0));
+
+        when(orderMapper.toResponse(any(Order.class)))
+                .thenReturn(orderResponse);
+
+        orderService.create(request);
+
+        ArgumentCaptor<Order> orderCaptor =
+                ArgumentCaptor.forClass(Order.class);
+
+        verify(orderRepository)
+                .save(orderCaptor.capture());
+
+        Order savedOrder =
+                orderCaptor.getValue();
+
+        assertThat(savedOrder.getTotalQuantity())
+                .isEqualTo(5);
+
+        assertThat(savedOrder.getTotalAmount())
+                .isEqualByComparingTo(
+                        new BigDecimal("350.00")
                 );
 
-        assertTrue(
-                exception.getMessage()
-                        .contains("Insufficient stock")
+        assertThat(product.getQuantity())
+                .isEqualTo(8);
+
+        assertThat(secondProduct.getQuantity())
+                .isEqualTo(17);
+
+        assertThat(savedOrder.getOrderItems())
+                .hasSize(2);
+    }
+
+    @Test
+    void create_ShouldThrowResourceNotFoundException_WhenProductDoesNotExist() {
+
+        OrderItemRequest itemRequest =
+                new OrderItemRequest();
+
+        itemRequest.setProductId(999L);
+        itemRequest.setQuantity(1);
+
+        CreateOrderRequest request =
+                new CreateOrderRequest();
+
+        request.setItems(
+                List.of(itemRequest)
         );
+
+        when(currentUserService.getCurrentUser())
+                .thenReturn(user);
+
+        when(productRepository.findById(999L))
+                .thenReturn(Optional.empty());
+
+        assertThatThrownBy(() ->
+                orderService.create(request))
+                .isInstanceOf(
+                        ResourceNotFoundException.class
+                )
+                .hasMessage("Product not found.");
+
+        verify(productRepository)
+                .findById(999L);
 
         verify(orderRepository, never())
                 .save(any(Order.class));
 
-        assertEquals(
-                1,
-                product.getQuantity()
-        );
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
     }
 
     @Test
-    void getById_shouldReturnOrderSuccessfully() {
+    void create_ShouldThrowBadRequestException_WhenStockIsInsufficient() {
 
-        Order order = new Order();
+        OrderItemRequest itemRequest =
+                new OrderItemRequest();
 
-        OrderResponse response = new OrderResponse();
+        itemRequest.setProductId(1L);
+        itemRequest.setQuantity(20);
+
+        CreateOrderRequest request =
+                new CreateOrderRequest();
+
+        request.setItems(
+                List.of(itemRequest)
+        );
+
+        when(currentUserService.getCurrentUser())
+                .thenReturn(user);
+
+        when(productRepository.findById(1L))
+                .thenReturn(Optional.of(product));
+
+        assertThatThrownBy(() ->
+                orderService.create(request))
+                .isInstanceOf(
+                        BadRequestException.class
+                )
+                .hasMessage(
+                        "Insufficient stock for product: Laptop"
+                );
+
+        assertThat(product.getQuantity())
+                .isEqualTo(10);
+
+        verify(orderRepository, never())
+                .save(any(Order.class));
+
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
+    }
+
+    @Test
+    void getById_ShouldReturnOrderSuccessfully() {
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
@@ -233,17 +386,19 @@ class OrderServiceImplTest {
         )).thenReturn(Optional.of(order));
 
         when(orderMapper.toResponse(order))
-                .thenReturn(response);
+                .thenReturn(orderResponse);
 
         OrderResponse result =
                 orderService.getById(1L);
 
-        assertNotNull(result);
+        assertThat(result)
+                .isNotNull();
 
-        assertSame(
-                response,
-                result
-        );
+        assertThat(result.getId())
+                .isEqualTo(1L);
+
+        verify(currentUserService)
+                .getCurrentUser();
 
         verify(orderRepository)
                 .findByIdAndUser(1L, user);
@@ -253,7 +408,7 @@ class OrderServiceImplTest {
     }
 
     @Test
-    void getById_shouldThrowExceptionWhenOrderNotFound() {
+    void getById_ShouldThrowResourceNotFoundException_WhenOrderDoesNotExist() {
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
@@ -263,59 +418,55 @@ class OrderServiceImplTest {
                 user
         )).thenReturn(Optional.empty());
 
-        ResourceNotFoundException exception =
-                assertThrows(
-                        ResourceNotFoundException.class,
-                        () -> orderService.getById(1L)
-                );
-
-        assertEquals(
-                "Order not found.",
-                exception.getMessage()
-        );
+        assertThatThrownBy(() ->
+                orderService.getById(1L))
+                .isInstanceOf(
+                        ResourceNotFoundException.class
+                )
+                .hasMessage("Order not found.");
 
         verify(orderMapper, never())
                 .toResponse(any(Order.class));
     }
 
     @Test
-    void getMyOrders_shouldReturnOrdersSuccessfully() {
+    void getMyOrders_ShouldReturnUserOrders() {
 
         Pageable pageable =
                 PageRequest.of(0, 10);
 
-        Order order = new Order();
-
-        OrderResponse response = new OrderResponse();
-
         Page<Order> orderPage =
-                new PageImpl<>(List.of(order));
+                new PageImpl<>(
+                        List.of(order),
+                        pageable,
+                        1
+                );
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
 
         when(orderRepository.findByUser(
-                user,
-                pageable
+                eq(user),
+                eq(pageable)
         )).thenReturn(orderPage);
 
         when(orderMapper.toResponse(order))
-                .thenReturn(response);
+                .thenReturn(orderResponse);
 
         Page<OrderResponse> result =
                 orderService.getMyOrders(pageable);
 
-        assertNotNull(result);
+        assertThat(result)
+                .isNotNull();
 
-        assertEquals(
-                1,
-                result.getTotalElements()
-        );
+        assertThat(result.getTotalElements())
+                .isEqualTo(1);
 
-        assertSame(
-                response,
-                result.getContent().getFirst()
-        );
+        assertThat(result.getContent())
+                .hasSize(1);
+
+        assertThat(result.getContent().get(0))
+                .isEqualTo(orderResponse);
 
         verify(orderRepository)
                 .findByUser(user, pageable);
@@ -325,43 +476,236 @@ class OrderServiceImplTest {
     }
 
     @Test
-    void updateStatus_shouldUpdateOrderSuccessfully() {
+    void getMyOrders_ShouldReturnEmptyPage_WhenUserHasNoOrders() {
 
-        Order order = new Order();
+        Pageable pageable =
+                PageRequest.of(0, 10);
 
-        order.setStatus(OrderStatus.PENDING);
-
-        OrderResponse response = new OrderResponse();
+        Page<Order> emptyPage =
+                Page.empty(pageable);
 
         when(currentUserService.getCurrentUser())
                 .thenReturn(user);
 
-        when(orderRepository.findByIdAndUser(
+        when(orderRepository.findByUser(
+                eq(user),
+                eq(pageable)
+        )).thenReturn(emptyPage);
+
+        Page<OrderResponse> result =
+                orderService.getMyOrders(pageable);
+
+        assertThat(result)
+                .isNotNull();
+
+        assertThat(result.getTotalElements())
+                .isZero();
+
+        assertThat(result.getContent())
+                .isEmpty();
+
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
+    }
+
+    @Test
+    void getAllTenantOrders_ShouldReturnTenantOrders() {
+
+        Pageable pageable =
+                PageRequest.of(0, 10);
+
+        Page<Order> orderPage =
+                new PageImpl<>(
+                        List.of(order),
+                        pageable,
+                        1
+                );
+
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByUser_Tenant(
+                eq(tenant),
+                eq(pageable)
+        )).thenReturn(orderPage);
+
+        when(orderMapper.toResponse(order))
+                .thenReturn(orderResponse);
+
+        Page<OrderResponse> result =
+                orderService.getAllTenantOrders(
+                        pageable
+                );
+
+        assertThat(result)
+                .isNotNull();
+
+        assertThat(result.getTotalElements())
+                .isEqualTo(1);
+
+        assertThat(result.getContent())
+                .hasSize(1);
+
+        assertThat(result.getContent().get(0))
+                .isEqualTo(orderResponse);
+
+        verify(currentUserService)
+                .getCurrentTenant();
+
+        verify(orderRepository)
+                .findByUser_Tenant(
+                        tenant,
+                        pageable
+                );
+
+        verify(orderMapper)
+                .toResponse(order);
+    }
+
+    @Test
+    void getAllTenantOrders_ShouldReturnEmptyPage_WhenTenantHasNoOrders() {
+
+        Pageable pageable =
+                PageRequest.of(0, 10);
+
+        Page<Order> emptyPage =
+                Page.empty(pageable);
+
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByUser_Tenant(
+                eq(tenant),
+                eq(pageable)
+        )).thenReturn(emptyPage);
+
+        Page<OrderResponse> result =
+                orderService.getAllTenantOrders(
+                        pageable
+                );
+
+        assertThat(result)
+                .isNotNull();
+
+        assertThat(result.getTotalElements())
+                .isZero();
+
+        assertThat(result.getContent())
+                .isEmpty();
+
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
+    }
+
+    @Test
+    void getAdminOrderById_ShouldReturnTenantOrderSuccessfully() {
+
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByIdAndUser_Tenant(
                 1L,
-                user
+                tenant
+        )).thenReturn(Optional.of(order));
+
+        when(orderMapper.toResponse(order))
+                .thenReturn(orderResponse);
+
+        OrderResponse result =
+                orderService.getAdminOrderById(1L);
+
+        assertThat(result)
+                .isNotNull();
+
+        assertThat(result.getId())
+                .isEqualTo(1L);
+
+        verify(currentUserService)
+                .getCurrentTenant();
+
+        verify(orderRepository)
+                .findByIdAndUser_Tenant(
+                        1L,
+                        tenant
+                );
+
+        verify(orderMapper)
+                .toResponse(order);
+    }
+
+    @Test
+    void getAdminOrderById_ShouldThrowResourceNotFoundException_WhenOrderNotInTenant() {
+
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByIdAndUser_Tenant(
+                1L,
+                tenant
+        )).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() ->
+                orderService.getAdminOrderById(1L))
+                .isInstanceOf(
+                        ResourceNotFoundException.class
+                )
+                .hasMessage("Order not found.");
+
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
+    }
+
+    @Test
+    void updateStatus_ShouldUpdateOrderStatusSuccessfully() {
+
+        /*
+         * We don't assume a specific status such as SHIPPED,
+         * because the actual OrderStatus enum in the project
+         * may contain different values.
+         *
+         * We select any status that is different from PENDING.
+         */
+        OrderStatus newStatus =
+                Arrays.stream(OrderStatus.values())
+                        .filter(status ->
+                                status != OrderStatus.PENDING)
+                        .findFirst()
+                        .orElse(OrderStatus.PENDING);
+
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByIdAndUser_Tenant(
+                1L,
+                tenant
         )).thenReturn(Optional.of(order));
 
         when(orderRepository.save(order))
                 .thenReturn(order);
 
         when(orderMapper.toResponse(order))
-                .thenReturn(response);
+                .thenReturn(orderResponse);
 
         OrderResponse result =
                 orderService.updateStatus(
                         1L,
-                        OrderStatus.CONFIRMED
+                        newStatus
                 );
 
-        assertNotNull(result);
+        assertThat(result)
+                .isNotNull();
 
-        assertEquals(
-                OrderStatus.CONFIRMED,
-                order.getStatus()
-        );
+        assertThat(order.getStatus())
+                .isEqualTo(newStatus);
+
+        verify(currentUserService)
+                .getCurrentTenant();
 
         verify(orderRepository)
-                .findByIdAndUser(1L, user);
+                .findByIdAndUser_Tenant(
+                        1L,
+                        tenant
+                );
 
         verify(orderRepository)
                 .save(order);
@@ -371,31 +715,36 @@ class OrderServiceImplTest {
     }
 
     @Test
-    void updateStatus_shouldThrowExceptionWhenOrderNotFound() {
+    void updateStatus_ShouldThrowResourceNotFoundException_WhenOrderNotFound() {
 
-        when(currentUserService.getCurrentUser())
-                .thenReturn(user);
+        OrderStatus newStatus =
+                Arrays.stream(OrderStatus.values())
+                        .findFirst()
+                        .orElse(OrderStatus.PENDING);
 
-        when(orderRepository.findByIdAndUser(
+        when(currentUserService.getCurrentTenant())
+                .thenReturn(tenant);
+
+        when(orderRepository.findByIdAndUser_Tenant(
                 1L,
-                user
+                tenant
         )).thenReturn(Optional.empty());
 
-        ResourceNotFoundException exception =
-                assertThrows(
-                        ResourceNotFoundException.class,
-                        () -> orderService.updateStatus(
-                                1L,
-                                OrderStatus.CONFIRMED
-                        )
-                );
-
-        assertEquals(
-                "Order not found.",
-                exception.getMessage()
-        );
+        assertThatThrownBy(() ->
+                orderService.updateStatus(
+                        1L,
+                        newStatus
+                ))
+                .isInstanceOf(
+                        ResourceNotFoundException.class
+                )
+                .hasMessage("Order not found.");
 
         verify(orderRepository, never())
                 .save(any(Order.class));
+
+        verify(orderMapper, never())
+                .toResponse(any(Order.class));
     }
 }
+
